[project]
authors = [
    {name = "Therese Koch"},
]
license = {text = "GNU General Public License v3.0"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.2",
    "scip>1.11.4",
    "librosa>=0.10.1",
    "seaborn>=0.13.0",
    "more-itertools>=10.1.0",
]
name = "avn"
version = "0.3.0"
description = "Package for zebra finch song analysis."
readme = "README.md"

[project.urls]
homepage = "https://github.com/theresekoch/avn"
repository = "https://github.com/theresekoch/avn"
documentation = "https://avn.readthedocs.io/en/latest/"

[project.optional-dependencies]
doc = [
    "Sphinx>=4.0.1",
    "nbsphinx>=0.8.4",
    "ipykernel>=5.5.4",
    "sphinxcontrib-napoleon>=0.7",
]
test = [
    "pytest>=7.2.2",
]
dev = [
    "avn[doc, test]",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
